--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -46,9 +46,9 @@ Imagine Bob hears Alice say ``I had carrots and bees for dinner.'' Perhaps she v
 
 Noisy channel principles provide a powerful framework for explaining how people process language in complex and uncertain real-time communicative situations \cite{clayards2008, levy2008, jaeger2010}. On this view of language, comprehenders integrate prior expectations with perceptual data probabilistically, weighting each according to its reliability \cite{ernst2002, jacobs1999}. In one demonstration of such integration, \citeA{gibson2013} presented participants with semantically implausible sentences (e.g., ``The mother gave the candle the daughter''), which could have been produced by small typographical errors in otherwise much more plausible sentences (``The mother gave the candle \emph{to} the daughter''). Adult comprehenders were able to correct these errors, and critically corrected them more often when they thought the communicative channel was noisy (and hence the perceptual signal was unreliable). Conversely, adults corrected these errors less often when they thought they were in a ``silly'' context where many other sentences were similarly implausible. These results suggest that adults flexibly weigh information from the perceptual signal and from speaker expectations.
 
-Do children also process language in the same flexible, expectation-based way? We know that toddlers use speakers' social and pragmatic cues to determine their intended referent in otherwise ambiguous situations \cite{carpenter1998, clark2009}. We also know that they use acoustic cues like speaker identity and linguistic cues like grammatical gender \cite{lew-williams2007, creel2012}. However, these successes have been shown only when all cues point to the same meaning, not when they disagree. When top-down and bottom-up cues disagree, preschoolers often over-weigh, or even attend exclusively to lower-level cues \cite{trueswell1999,snedeker2004}.
+Do children also process language in the same flexible, expectation-based way? Toddlers use speakers' social and pragmatic cues to determine their intended referent in otherwise ambiguous situations \cite{carpenter1998, clark2009}. And they also use acoustic cues like speaker identity and linguistic cues like grammatical gender \cite{lew-williams2007, creel2012}. These successes have been shown only when all cues point to the same meaning, however, not when they disagree. When top-down and bottom-up cues disagree, preschoolers often over-weigh---or even attend exclusively to---the lower-level cues \cite{trueswell1999,snedeker2004}.
 
-Outside of the domain of language processing, even older children sometimes fail to combine cues across modalities or information sources \cite{gori2008,nardini2008,nardini2010}. For example, while adults integrate haptic and visual cues to estimate both size and orientation, 8-year-old children rely exclusively on vision to estimate orientation and haptics to estimate size. Thus, children's successful use of independent information---for example, about high-level expectations for a speaker \cite{graham2014,matthews2010} or their reliability \cite{pasquini2007}---does not guarantee that they can integrate such information with perceptual uncertainty. Our current experiments test adaptive, expectation-based integration in language in the absence of other processing demands.
+Outside of the domain of language processing, even older children sometimes fail to combine cues across modalities or information sources \cite{gori2008,nardini2008,nardini2010}. For example, while adults integrate haptic and visual cues to estimate both size and orientation, 8-year-old children rely exclusively on vision to estimate orientation and haptics to estimate size. Thus, children's successful use of independent information---for example, about high-level expectations for a speaker \cite{graham2014,matthews2010} or their reliability \cite{pasquini2007}---does not guarantee that they can integrate such information with perceptual uncertainty. Our current experiments test this kind of adaptive, expectation-based integration in language in the absence of other processing demands.
 
 % In fact, in language processing, children sometimes show striking deficits in revising incorrect expectations about meaning in cases where syntax and context compete \cite{trueswell1999,snedeker2013}. But because these failures occur in complex contexts designed to test the development of other abilities, the question remains unanswered. Our current experiments test adaptive, expectation-based integration in the absence of other processing demands.
 
@@ -76,9 +76,9 @@ We created a paradigm to independently manipulate expectations about speaker pla
 \subsection{Method}
 \subsubsection{Participants}
 
-Children were recruited at the Bing Nursery School on Stanford's campus. Each child was asked if they would be willing to play a game with the experimenter, and informed that they could stop playing at any time. Children were randomly assigned to speaker conditions, and we collected data until there were at least 20 participants in each condition (similar to other psycholinguistic studies of children \citeNP<e.g.>{trueswell1999, creel2012}). Data from a total of 43 children were collected; children were all between 4 and 6 years old, and approximately half were female. Neither age nor sex distribution varied significantly across conditions (Plausible: 23 children (12 girls), Mean age = 4.6 years (range = 4.0--5.3 years), Implausible: 20 children (10 girls), Mean age = 4.7 years (range = 4.1--5.4 years)).
+Children were recruited at the Bing Nursery School on Stanford's campus. Each child was asked if they would be willing to play a game with the experimenter, and informed that they could stop playing at any time. Children were randomly assigned to speaker conditions, and we collected data until there were at least 20 participants in each condition (similar to other psycholinguistic studies of children \citeNP<, e.g.,>{trueswell1999, creel2012}). Data from a total of 43 children were collected; children were all between 4 and 6 years old, and approximately half were female. Neither age nor sex distribution varied significantly across conditions (Plausible: 23 children, 12 girls, Mean age = 4.6 years, range = 4.0--5.3 years; Implausible: 20 children, 10 girls, Mean age = 4.7 years, range = 4.1--5.4 years).
 
-Adult participants were recruited through Amazon Mechanical Turk. We posted 50 Human Intelligence Tasks (HITs) to be completed only by participants with US IP addresses that each paid 30 cents. A total of 50 HITs were posted, with Speaker condition assigned randomly to each participant. Fifty was chosen on the basis of the effect size in the child data.
+Adult participants were recruited through Amazon Mechanical Turk. We posted 50 Human Intelligence Tasks (HITs) to be completed only by participants with US IP addresses that each paid 30 cents. A total of 50 HITs were posted, with Speaker condition assigned randomly to each participant. The number 50 was chosen on the basis of the effect size in the child data.
 
 \subsubsection{Stimuli, Design, and Procedure}
 
@@ -90,7 +90,7 @@ For all participants, the experiment began with a short introduction to Katie, t
 
 \subsection{Results}
 
-In order to validate our manipulation, we first analyze the effect of the speaker on Exposure trials. If participants were attending to the speaker's requests during Exposure trials, those in the Plausible condition should have been more likely to choose the plausible referent (e.g. kittens), and those in the Implausible condition should have been more likely to choose the implausible referent (e.g. hammers). We tested this prediction formally by fitting a mixed-effects logistic regression predicting choice on Exposure trials separately for children and adults. As predicted, both children and adults selected the plausible referent more often in the Plausible condition ($\beta_{child} = 4.54$,  $z = 8.28$, $p <.001$, $d = 5.56$; $\beta_{adult} = 9.41$,  $z = 5.83$, $p <.001$, $d = 24.3$). We then fit a model to all of the data, asking whether adults and children were differentially affected by speaker condition. We found significant effects of condition, age group, and their interaction ($\beta_{Plausible Speaker} = 9.52$,  $z = 7.87$, $p <.001$,  $\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$; $\beta_{child\: \cdot \: Plausible Speaker} = -5$,  $z = -4.12$, $p <.001$). Thus, both children and adults were sensitive to the speaker manipulation during Exposure trials, selecting the appropriate referent whether or not the request was implausible, although adults selected the correct referent more often in both conditions.
+In order to validate our manipulation, we first analyze the effect of the speaker on Exposure trials. If participants were attending to the speaker's requests during Exposure trials, those in the Plausible condition should have been more likely to choose the plausible referent (e.g., kittens), and those in the Implausible condition should have been more likely to choose the implausible referent (e.g., hammers). We tested this prediction formally by fitting a mixed-effects logistic regression predicting choice on Exposure trials separately for children and adults. As predicted, both children and adults selected the plausible referent more often in the Plausible condition ($\beta_{child} = 4.54$,  $z = 8.28$, $p <.001$, $d = 5.56$; $\beta_{adult} = 9.41$,  $z = 5.83$, $p <.001$, $d = 24.3$). We then fit a model to all of the data, asking whether adults and children were differentially affected by speaker condition. We found significant effects of condition, age group, and their interaction ($\beta_{Plausible Speaker} = 9.52$,  $z = 7.87$, $p <.001$,  $\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$; $\beta_{child\: \cdot \: Plausible Speaker} = -5$,  $z = -4.12$, $p <.001$). Thus, both children and adults were sensitive to the speaker manipulation during Exposure trials, selecting the appropriate referent whether or not the request was implausible, although adults selected the correct referent more often in both conditions.
 
 \begin{figure}[t]
 \centering
@@ -101,7 +101,7 @@ In order to validate our manipulation, we first analyze the effect of the speake
 
 Did this exposure to a Plausible vs. Implausible speaker change participants' expectations on the ambiguous Test trials? Figure~\ref{fig:exp1_results} shows the proportion of both children and adults who selected the plausible referent at test in both conditions. As predicted, both groups were sensitive to the manipulation, selecting the plausible referent more often in the Plausible Speaker condition ($\beta_{child} = 1.10$, $z = 3.53$, $p <.001$, $d = 1.10$; $\beta_{adult} = 3.11$, $z = 3.56$, $p <.001$, $d = 1.09$). While children were overall more likely to pick the plausible referent in both conditions, the effect size of the difference between conditions was nearly identical in adults and children, indicating equal adaptation to the Plausible vs. Implausible speaker. To confirm these findings formally, we again fit a mixed-effects regression predicting choice on Test trials from group (child vs. adult), condition (Plausible vs. Implausible Speaker), and their interaction. Both of the main effects were significant, but the interaction was not ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible Speaker} = 2.33$,  $z = 4.40$, $p <.001$,  $\beta_{child \: \cdot \: Plausible Speaker} = -1.01$,  $z = -1.53$, $p = .13$). Thus, children and adults, to the same degree, were more likely to select the plausible referent on ambiguous Test trials when the speaker had previously referred to plausible referent on unambiguous Exposure trials.
 
-When children and adults were exposed to a speaker who was likely to produce semantically implausible utterances (e.g. ``my cat has three little hammers''), they were more likely to interpret ambiguous utterances literally instead of error-correcting to a more semantically plausible alternative. Intriguingly, the size of this adaptation was nearly identical in both groups, suggesting that 4- and 5-year-olds are already adapting as rapidly as adults. Children were, however, more likely overall to pick the plausible referent during ambiguous test trials, suggesting that they generally rely more on their expectations than do adults. This finding is consonant with other evidence showing significantly more noise in children's perceptual systems \cite{neuman1983}.
+When children and adults were exposed to a speaker who was likely to produce semantically implausible utterances (e.g., ``my cat has three little hammers''), they were more likely to interpret ambiguous utterances literally instead of error-correcting to a more semantically plausible alternative. Intriguingly, the size of this adaptation was nearly identical in both groups, suggesting that 4- and 5-year-olds are already adapting as rapidly as adults. Children were, however, more likely overall to pick the plausible referent during ambiguous test trials, suggesting that they generally rely more on their expectations than do adults. This finding is consonant with other evidence showing significantly more noise in children's perceptual systems \cite{neuman1983}.
 
 \section{Experiment 2}
 
@@ -111,7 +111,7 @@ Experiment 2 replicates Experiment 1 in a larger sample of children across a bro
 
 \subsubsection{Participants}
 
-For Experiment 2, children were recruited from the floor of the San Jose Children's Discovery museum. An experimenter approached the child and parent and obtained informed consent before inviting both to enter a separate room in which an iPad and camera were set up. Data from a total of 146 children were collected, 6 of whom were excluded for $<50\%$ exposure to English. As before, children were recruited until at least 20 had been run in each condition for each of 3 age groups: 3, 4, and 5-year-olds. Children's ages were comparable within-groups across conditions, although gender varied more due to sampling (Plausible: 27 3-year-olds [16 girls, age: mean = 3.5, range = 3--3.93], 21 4-year-olds [7 girls, age: mean = 4.6, range = 4.22--4.97], 23 5-year-olds [19 girls, age: mean = 5.49, range = 5.01--5.95], Implausible: 21 3-year-olds [8 girls, age: mean = 3.49, range = 3.02--3.93], 28 4-year-olds [23 girls, age: mean = 4.51, range = 4--4.94], 20 5-year-olds [12 girls, age: mean = 5.48, range = 5.05--5.90].
+For Experiment 2, children were recruited from the floor of the San Jose Children's Discovery museum. An experimenter approached the child and parent and obtained informed consent before inviting both to enter a separate room in which an iPad and camera were set up. Data from a total of 146 children were collected, 6 of whom were excluded for $<50\%$ exposure to English. As before, children were recruited until at least 20 had been run in each condition for each of 3 age groups: 3, 4, and 5-year-olds. Children's ages were comparable within-groups across conditions, although gender varied more due to sampling (Plausible: 27 3-year-olds, 16 girls, age: mean = 3.5, range = 3--3.93; 21 4-year-olds, 7 girls, age: mean = 4.6, range = 4.22--4.97; 23 5-year-olds, 19 girls, age: mean = 5.49, range = 5.01--5.95; Implausible: 21 3-year-olds, 8 girls, age: mean = 3.49, range = 3.02--3.93; 28 4-year-olds, 23 girls, age: mean = 4.51, range = 4--4.94; 20 5-year-olds, 12 girls, age: mean = 5.48, range = 5.05--5.90).
 
 
 \subsubsection{Stimuli, Design, \& Procedure}
@@ -120,7 +120,7 @@ Experiment 2 was an exact replication of Experiment 1.
 
 \subsection{Results}
 
-As in Experiment 1, we first establish that children understood the task, and encoded the differences between the Plausible and Implausible speakers on Exposure trials. We began by fitting a mixed-effects logistic regression for each age group separately. In all 3 age groups, children were more likely to select the plausible referent when asked for it by the Plausible speaker ($\beta_{3-years} = 1.43$, $z = 3.71$, $p < .001$, $d = 1.20$; $\beta_{4-years} = 3.10$, $z = 6.63$, $p < .001$, $d = 2.66$; $\beta_{5-years} = 5.55$, $z = 7.39$, $p < .001$, $d = 8.27$). We then asked whether children's behavior changed over development. A mixed-effects model fit to all of the children's data showed main effects of both Age ($\beta = -.74$, $z = -4.18$, $p < .001$) and Speaker Plausibility ($\beta = -6.16$, $z = 1.81$, $p < .001$), and also an interaction between the two ($\beta = 2.12$, $z = 7.61$, $p < .001$). Thus, older children showed a greater sensitivity to the speaker on the unambiguous Exposure trials.
+As in Experiment 1, we first establish that children understood the task and encoded the differences between the Plausible and Implausible speakers on Exposure trials. We began by fitting a mixed-effects logistic regression for each age group separately. In all 3 age groups, children were more likely to select the plausible referent when asked for it by the Plausible speaker ($\beta_{3-years} = 1.43$, $z = 3.71$, $p < .001$, $d = 1.20$; $\beta_{4-years} = 3.10$, $z = 6.63$, $p < .001$, $d = 2.66$; $\beta_{5-years} = 5.55$, $z = 7.39$, $p < .001$, $d = 8.27$). We then asked whether children's behavior changed over development. A mixed-effects model fit to all of the children's data showed main effects of both Age ($\beta = -.74$, $z = -4.18$, $p < .001$) and Speaker Plausibility ($\beta = -6.16$, $z = 1.81$, $p < .001$), and also an interaction between the two ($\beta = 2.12$, $z = 7.61$, $p < .001$). Thus, older children showed a greater sensitivity to the speaker on the unambiguous Exposure trials.
 
 We next turned to the Test trials. When we examined each age group separately we found that as in Experiment 1, both 4- and 5-year olds leveraged their previous experience with the speaker when interpreting the ambiguous test utterances (Figure~\ref{fig:exp2_results}). However, 3-year-olds did not ($\beta_{3-years} = .-6$, $z = .21$, $p  = .83$, $d = .06$; $\beta_{4-years} = 1.01$, $z = 2.87$, $p < .01$, $d = .82$; $\beta_{5-years} = 1.35$, $z = 3.96$, $p < .001$, $d = 1.24$). A mixed-effects regression fit to all of the data confirmed this developmental change in sensitivity, finding a significant main effect of Age ($\beta = -.43$, $z = -2.75$, $p < .01$), a marginal effect of Plausible Speaker ($\beta = -1.71$, $z = -1.82$, $p = .07$), and a significant interaction between the two ($\beta = .54$, $z = 2.58$, $p = .01$). In line with previous work, these results show that 3-year-old children have trouble using top-down speaker expectations when processing ambiguous utterances \cite{kidd2005}. However, children appear to improve significantly over the next two years \cite{rabagliati2013}.
 
@@ -136,7 +136,7 @@ Older children were thus more sensitive to the speaker's utterances on unambiguo
 
 \section{Experiment 3}
 
-Experiment 3 replicates Experiments 1 and 2 and tests a second prediction of noisy channel processing: As speech becomes noisier,and thus a less reliable cue, children should rely more on their expectations.
+Experiment 3 replicates Experiments 1 and 2 and tests a second prediction of noisy channel processing: As speech becomes noisier, and thus a less reliable cue, children should rely more on their expectations.
 
 \subsection{Method}
 
@@ -146,9 +146,9 @@ For Experiment 3, children were again recruited from the floor of the San Jose C
 
 \subsubsection{Stimuli, Design, \& Procedure}
 
-Stimuli were constructed as in Experiments 1 and 2 with a few small changes. First, one additional Test trial was added to increase power. Second, two versions of each acoustic recording were made. One was recorded in a sound-proof room by a female native English speaker. The second was constructed by convolving each recording with randomly generated Brown noise with an amplitude of .7. The first was used in the No Noise conditions, the second was used to replicate the two conditions from Experiment 1 as well as for the Control condition.
+Stimuli were constructed as in Experiments 1 and 2 with a few small changes. First, one additional Test trial was added to increase power. Second, two versions of each acoustic recording were made. One was recorded in a sound-proof room by a female native English speaker. The second was constructed by convolving the first with randomly generated Brown noise with an amplitude of .7. The first was used in the No Noise conditions, the second was used to replicate the two conditions from Experiment 1 as well as for the Control condition.
 
-In addition, because all of the Test trials asked the listener to select the semantically implausible referent, it is possible that exposure to an Implausible speaker induced listeners to select the implausible referent at test generally, independent of their acoustic input.  In Experiment 2, we provide a Control condition in which the Implausible speaker from training asked for the semantically plausible referent at test. If children inferred from the unambiguous Exposure trials that the goal of the game was to pick the ``silly'' referent, they should have continued to select the implausible referent on Test trials. In contrast, if Exposure trials caused them to adjust the relative weights on acoustic information and linguistic expectations, they should instead have selected the plausible referent at test.
+In addition, because all of the Test trials asked the listener to select the semantically implausible referent, it is possible that exposure to an Implausible speaker induced listeners to select the implausible referent at test generally, independent of their acoustic input.  In Experiment 3, we provide a Control condition in which the Implausible speaker from training asked for the semantically plausible referent at test. If children inferred from the unambiguous Exposure trials that the goal of the game was to pick the ``silly'' referent, they should have continued to select the implausible referent on Test trials. In contrast, if Exposure trials caused them to adjust the relative weights on acoustic information and linguistic expectations, they should instead have selected the plausible referent at test.
 
 \subsection{Results}
 
@@ -172,7 +172,7 @@ Finally, one alternative explanation for the difference between Speaker conditio
 
 When we use language to communicate, we are doing more than processing the sounds we hear; we are trying to infer the speaker's intended meaning \cite{clark1996}. Because perception is inherently noisy and uncertain, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. Our experiments here provide evidence that children are able to integrate speaker expectations with perceptual uncertainty by ages 4--5, though perhaps not earlier.
 
-How much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models of cue integration predict that each cue should be weighted in proportion to its reliability \cite{jacobs1999, ernst2002}. This prediction holds for adult listeners across levels in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006}. In our experiments here we cannot say that children's weighting was optimal relative to cue reliability, only that it was adaptive in the sense that the weighting changed with manipulations of reliability \cite<as in>{gibson2013}. It is a challenge for future work to derive independent measures of reliability for high-level linguistic stimuli. Further, because our participants adapted to only one speaker, we cannot know to what extent this adaptation was speaker-specific, and to what extent it would generalize. However, an attractive feature of the noisy channel framework, is that it can be applied hierarchically, with appropriate adaptation predicted at the level of speaker, community, and lexicon as evidence accumulates \cite{kleinschmidt2015}.
+How much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models of cue integration predict that each cue should be weighted in proportion to its reliability \cite{jacobs1999, ernst2002}. This prediction holds for adult listeners across levels in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006}. In our experiments here we cannot say that children's weighting was optimal relative to cue reliability, only that it was adaptive in the sense that the weighting changed with manipulations of reliability \cite<as in>{gibson2013}. It is a challenge for future work to derive independent measures of reliability for high-level linguistic stimuli. Further, because our participants adapted to only one speaker, we cannot know to what extent this adaptation was speaker-specific, and to what extent it would generalize. However, an attractive feature of the noisy channel framework is that it can be applied hierarchically, with appropriate adaptation predicted at the level of speaker, community, and lexicon as evidence accumulates \cite{kleinschmidt2015}.
 
 In our studies, children adjusted their reliance on expectations as much as adults, but also relied relatively more on top-down expectations in general. Because of the greater noise inherent in children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults \cite{neuman1983, lyons2011}. Perhaps children with impaired acoustic processing rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations (e.g., children with specific language impairment) rely more on the acoustic signal. Our paradigm could be used to make these comparisons.
 
