--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -48,11 +48,11 @@ Noisy channel principles provide a powerful framework for explaining how people 
 
 Do children also process language in the same flexible, expectation-based way? Toddlers use speakers' social and pragmatic cues to determine their intended referent in otherwise ambiguous situations \cite{carpenter1998, clark2009}. They also use acoustic cues like speaker identity and linguistic cues like grammatical gender \cite{lew-williams2007, creel2012}. However, these successes have been shown only when all cues point to the same meaning. When top-down and bottom-up cues conflict, preschoolers often over-weigh, or even attend exclusively to lower-level cues \cite{trueswell1999,snedeker2004}.
 
-Outside of language processing, even older children sometimes fail to combine cues \cite{gori2008,nardini2008,nardini2010}. For example, while adults integrate haptic and visual cues to estimate both size and orientation, 8-year-olds rely exclusively on vision for orientation and haptics for size. Thus, children's successful use of independent information---for example, about high-level speaker expectations\cite{graham2014,matthews2010} or speaker reliability \cite{pasquini2007}---does not their guarantee integration with perceptual uncertainty.
+Outside of language processing, even older children sometimes fail to combine cues \cite{gori2008,nardini2008,nardini2010}. For example, while adults integrate haptic and visual cues to estimate both size and orientation, 8-year-olds rely exclusively on vision for orientation and haptics for size. Thus, children's successful use of independent information---for example, about high-level speaker expectations \cite{graham2014,matthews2010} or speaker reliability \cite{pasquini2007}---does not their guarantee integration with perceptual uncertainty.
 
 % In fact, in language processing, children sometimes show striking deficits in revising incorrect expectations about meaning in cases where syntax and context compete \cite{trueswell1999,snedeker2013}. But because these failures occur in complex contexts designed to test the development of other abilities, the question remains unanswered. Our current experiments test adaptive, expectation-based integration in the absence of other processing demands.
 
-We created a paradigm to independently manipulate expectations about speaker plausibility and perceptual noise. We introduced preschoolers (and adults) to either a Plausible or Implausible Speaker who initially uttered unambiguously different sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:exposure}). Participants were then asked to resolve the intended meaning for ambiguous sentences like the ``bees/peas'' example above, which could either be produced by a perceptual error, or could convey implausible content (Figure \ref{fig:test}). If children integrate speaker expectations and channel noise, their interpretations should be a product of both.
+We created a paradigm to manipulate expectations about speaker plausibility and perceptual noise independently. We introduced preschoolers (and adults) to either a Plausible or Implausible Speaker who initially uttered unambiguously different sentences like ``my cat has three little [kittens/hammers]'' (Figure \ref{fig:exposure}). Participants were then asked to resolve the intended meaning for ambiguous sentences like the ``bees/peas'' example above, which could either be produced by a perceptual error, or could convey implausible content (Figure \ref{fig:test}). If children integrate speaker expectations and channel noise, their interpretations should be a product of both.
 
 % In Experiment 1, we first test this hypothesis by manipulating speaker plausibility. In Experiment 2, we replicate Experiment 1, and cross speaker plausibility with a manipulation of channel noise.
 
